<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="#FFE7CC"
        android:padding="15dp"
        android:textSize="50sp"
        android:gravity="bottom|end"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:onClick="ondigit"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:layout_margin="2dp"
            android:onClick="ondigit"
            tools:ignore="UsingOnClickInXml"            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:layout_margin="2dp"
            android:onClick="ondigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btncross"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="DEL"
            android:onClick="removelastdigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/buttoncolor"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:layout_margin="2dp"
            android:onClick="ondigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:layout_margin="2dp"
            android:onClick="ondigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:onClick="ondigit"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btndivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onoperator"
            tools:ignore="UsingOnClickInXml"
            android:text="@string/divide"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:onClick="ondigit"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:onClick="ondigit"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:onClick="ondigit"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btnmultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:onClick="onoperator"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btndot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"
            android:onClick="ondotpoint"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:onClick="ondigit"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btnclr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"
            android:onClick="onclear"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btnminus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:onClick="onoperator"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btneql"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/eqttwo"
            android:onClick="oneql"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>

        <Button
            android:id="@+id/btnmod"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mod"
            android:onClick="onoperator"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>
        <Button
            android:id="@+id/btnadd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:onClick="onoperator"
            tools:ignore="UsingOnClickInXml"
            android:layout_margin="2dp"
            android:backgroundTint="@color/buttoncolor"/>
    </LinearLayout>



</LinearLayout>